--- a/assets/index.css
+++ b/assets/index.css
@@ -228,6 +228,7 @@ h6 {
 .navbar-menu-btn {
   display: flex;
   padding: 0.5rem;
+  font-size: 1.5rem;
   border: none;
   background: transparent;
   color: hsl(var(--muted-foreground));
@@ -289,7 +290,7 @@ h6 {
   top: 0;
   left: 0;
   z-index: 61;
-  width: 100vw;
+  width: 60vw;
   height: 100%;
   padding-top: 3rem;
   padding-left: 1rem;
@@ -335,7 +336,6 @@ h6 {
   min-height: 90vh;
   display: flex;
   align-items: center;
-  padding-top: 7rem;
 }
 
 .hero-badge {
